Dropdown options clear buttons

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -22,21 +22,16 @@
         </div>
         <div class="col-lg-10" id="items">
             <h2 class="page-title">My Resources</h2>
-{#            <div class=resource-search>#}
-{#                <input class=resource-search-entry placeholder="Search..."></input>#}
-{#                <ul class=resource-search-items></ul>#}
-{#                <ul class=resource-search-options></ul>#}
-{#            </div>#}
             <div class="row">
                 <div class="col-sm-8 col-xs-12">
-                    <div class="input-group" id="adv-search">
+                    <div class="input-group">
                         <span class="glyphicon glyphicon-search search-icon"></span>
                         <input id="resource-search-input" type="text" class="form-control" placeholder="Search"/>
 
                         <div class="input-group-btn">
                             <div class="btn-group" role="group">
                                 <div class="dropdown dropdown-lg">
-                                    <span class="btn-clear-search"><span id="btn-clear-search-input" class="glyphicon glyphicon-remove-sign"></span></span>
+                                    <span id="btn-clear-search-input" class="glyphicon glyphicon-remove-sign btn-clear-search"></span>
 
                                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
                                             aria-expanded="false"><span class="caret"></span></button>
@@ -60,10 +55,12 @@
                                             <div class="form-group">
                                                 <label for="contain">Author</label>
                                                 <input id="input-author" class="form-control" type="text"/>
+                                                <span id="btn-clear-author-input" class="glyphicon glyphicon-remove-sign btn-clear-search-inline"></span>
                                             </div>
                                             <div class="form-group">
                                                 <label for="contain">Subject</label>
                                                 <input id="input-subject" class="form-control" type="text"/>
+                                                <span id="btn-clear-subject-input" class="glyphicon glyphicon-remove-sign btn-clear-search-inline"></span>
                                             </div>
                                         </form>
                                     </div>
@@ -123,6 +120,18 @@
                 var searchString = removeQueryOccurrences($(this).val());
                 applyQueryStrings();
                 resourceTable.search(searchString).draw();
+            });
+
+            $("#btn-clear-author-input").click(function () {
+                $("#input-author").val("");
+                typeQueryStrings();
+                $("#resource-search-input").keyup();
+            });
+
+            $("#btn-clear-subject-input").click(function () {
+                $("#input-subject").val("");
+                typeQueryStrings();
+                $("#resource-search-input").keyup();
             });
 
             $("#btn-clear-search-input").click(function () {
@@ -229,7 +238,7 @@
         {#        3 - Last Modified         #}
         {#        4 - Subject               #}
 
-        /* Custom filtering function which will search data for the values in the custom filter dropdown */
+        /* Custom filtering function which will search data for the values in the custom filter dropdown or query strings */
         $.fn.dataTable.ext.search.push (
                 function (settings, data, dataIndex) {
                     var inputString = $("#resource-search-input").val();
@@ -281,270 +290,6 @@
                     return true;
                 }
         );
-
-        var k = 1;
-        $(function() {
-            $('[data-toggle="tooltip"]').tooltip({'placement': 'right'});
-            $("#add-row").click(function() {
-                k++;
-                var new_row = $("#initial-dcterm").clone();
-                $("#dcterm1", new_row).attr('name', 'dcterm' + k).attr('id', 'dcterm' + k);
-                $("#dccontent1", new_row).attr('name', 'dccontent' + k).attr('id', 'dccontent' + k);
-
-                $("#dcterms-rows").append(new_row);
-                new_row.attr('id', 'dcterm' + k);
-                return false;
-            })
-        });
-
-        var urlParams;
-        (window.onpopstate = function () {
-            var match,
-                pl     = /\+/g,  // Regex for replacing addition symbol with a space
-                search = /([^&=]+)=?([^&]*)/g,
-                decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
-                query  = window.location.search.substring(1);
-
-            urlParams = {};
-            var decoded;
-            while (match = search.exec(query)) {
-                decoded = decode(match[1]);
-                if (typeof urlParams[decoded] === "undefined") {
-                    urlParams[decoded] = [];
-                }
-                urlParams[decoded].push(decode(match[2]));
-            }
-        })();
-
-        $.widget("custom.ResourceFilter", {
-            options: {
-
-            },
-
-            _create: function() {
-                var $el = this.element;
-                var $input = this.$input = this.element.find('input');
-                this.$items = this.element.find('.resource-search-items');
-                this.$options = this.element.find('.resource-search-options');
-                this.curOpt = null;
-
-                $input.on('keyup', this.scanForItem.bind(this))
-                $input.on('keydown', function(ev) {
-                    if (ev.keyCode == 40 || ev.keyCode == 38) {
-                        ev.preventDefault();
-                        return false;
-                    } else if (ev.keyCode == 8) {
-                        if ($input[0].selectionStart === 0 && $input[0].selectionEnd === 0) {
-                            $el.ResourceFilter("removeLastItem");
-                            return;
-                        }
-                    }
-                })
-
-                var self = this;
-                this.$options.on('click', '.term-option', function() {
-                    var $el = $(this);
-                    self.addItem($el.attr('data-label'), $el.text(), $el.attr('data-id'));
-                    self.clearCurrentlyTypingTerm();
-                    self.$input.focus();
-                    self.showOptions();
-                });
-
-                // Find existing search and populate the search field
-                $input.val("");
-                $.each(["type", "author", "contributor", "owner", "subject"], function(){
-                    if (urlParams[this]) {
-                        for (var i=0; i < urlParams[this].length; i++) {
-                            self.addItem(this, urlParams[this][i], urlParams[this][i]);
-                        }
-                    }
-                });
-                $input.val(urlParams.text[0]);
-                $input.focus();
-
-                this.setPadding();
-            },
-
-            // return: [{type: T, value: V}, ...]
-            searchForTerm: function(term) {
-                var terms = [];
-
-                return new Promise(function(resolve, error) {
-                    if (term.length === 0) {
-                        resolve([]);
-                    } else {
-                        var req = {
-                            url: "/hsapi/_internal/search/autocomplete/",
-                            data: {
-                                term: term,
-                            },
-                        }
-                        $.ajax(req).then(function(r){
-                            var results = [];
-                            for (var i=0; i < r.length; i++) {
-                                results.push(r[i]);
-                            }
-                            resolve(results);
-                        });
-                    }
-                });
-            },
-
-            // KeyCode Values
-            //
-            // 40 UP
-            // 38 DOWN
-            // 27 ESCAPE
-            // 13 ENTER
-            // 8  BACKSPACE
-
-            scanForItem: function(ev) {
-                switch (ev.keyCode) {
-                    case 13: // ENTER
-                        var $termOpt = $(".term-option.selected");
-                        if ($termOpt.length > 0) {
-                            $termOpt.click();
-                        } else {
-                            var items = this.getItems();
-                            var textsearch = this.$input.val();
-                            var qs = "";
-
-                            for (var i=0; i < items.length; i++) {
-                                var item = items[i];
-                                qs += "&" + item.type.toLowerCase() + "=" + item.id;
-                            }
-                            qs += "&text=" + textsearch;
-                            window.location.search = qs;
-                        }
-                    case 40: // UP
-                        this.selectDown();
-                        break;
-                    case 38: // DOWN
-                        this.selectUp();
-                        break;
-                    case 27: // ESCAPE
-                        this.hideOptions();
-                        break;
-                    case 8: // BACKSPACE
-                    default: // While Typing ...
-                        var self = this;
-                        var text = this.$input.val();
-                        var termPos = text.search(/\w+:[\w\-_@\.]+ $/);
-                        if (termPos >= 0) {
-                            var remaining = text.slice(0, termPos);
-                            var term = text.slice(termPos);
-                            var term_parts = term.split(':');
-
-                            this.$input.val(remaining);
-                            this.addItem(term_parts[0], term_parts[1]);
-                        } else {
-                            var current = text.slice(text.search(/[\w\-_@\.]+$/));
-                            console.log(current);
-                            this.searchForTerm(current).then(this.showOptions.bind(this));
-                        }
-                }
-            },
-
-            clearCurrentlyTypingTerm: function() {
-                this.$input.val("");
-            },
-
-            showOptions: function(options) {
-                var self = this;
-                this.$options.html("");
-                $.each(options, function() {
-                    self.addOption(this.label, this.value, this.id);
-                });
-                this.resetSelection();
-            },
-            hideOptions: function() {
-                this.$options.html("");
-            },
-            countOptions: function() {
-                return this.$options.find('li').length;
-            },
-            addOption: function(type, value, id) {
-                // <li data-label=foo>bar</li>
-                var $item = $("<li class=term-option></li>");
-                $item.attr('data-label', type);
-                $item.attr('data-id', id);
-                $item.text(value);
-                this.$options.append($item);
-
-                this.setPadding();
-                this._showSelection();
-            },
-            selectDown: function() {
-                if (this.curOpt === null) {
-                    this.curOpt = 0;
-                } else {
-                    this.curOpt += 1;
-                }
-
-                this.curOpt = Math.min(this.curOpt, this.countOptions() - 1);
-                this._showSelection();
-            },
-            selectUp: function() {
-                if (this.curOpt === null) {
-                    this.curOpt = this.$options.length - 1;
-                } else {
-                    this.curOpt -= 1;
-                }
-
-                this.curOpt = Math.max(this.curOpt, 0);
-                this._showSelection();
-            },
-            resetSelection: function() {
-                this.curOpt = 0;
-            },
-            _showSelection: function() {
-                if (this.curOpt !== null) {
-                    this.$options.find('li').removeClass('selected');
-                    this.$options.find('li:eq('+this.curOpt+')').addClass('selected');
-                }
-            },
-
-            addItem: function(type, value, id) {
-                // <li data-label=foo>bar</li>
-                var $item = $("<li></li>");
-                $item.attr('data-label', type);
-                $item.attr('data-id', id);
-                $item.text(value);
-                this.$items.append($item);
-
-                this.setPadding();
-            },
-
-            getItems: function() {
-                var items = [];
-                this.$items.find('li').each(function(i, li) {
-                    var $item = $(li);
-                    items.push({
-                        "type": $item.attr('data-label'),
-                        "id": $item.attr('data-id'),
-                        "value": $item.text(),
-                    });
-                });
-                return items;
-            },
-
-            removeLastItem: function() {
-                this.$items.find('li:last-child').remove();
-
-                this.setPadding();
-            },
-
-            setPadding: function() {
-                $li = this.$items.find('li');
-                var width = 3;
-                $li.each(function(){ width += $(this).outerWidth()+5; });
-                this.$input.css('padding-left', width+"px");
-            },
-        });
-
-        $(function() {
-            $('.resource-search').ResourceFilter();
-        });
     </script>
 
 {% endblock %}
